--- a/pages/contact.html
+++ b/pages/contact.html
@@ -4,7 +4,7 @@
 {% block content %} 
 <!-- Importing Nunjucks Macro -->
 {% import 'macros/banner.nunjucks' as nav %}
-{{nav.active('portfolio')}}
+{{nav.active('portfolio',bannercopy)}}
 
 		<!-- Main -->
 		<div id="main" class="container">
