--- a/pages/home.html
+++ b/pages/home.html
@@ -2,9 +2,10 @@
 
 
 {% block content %} 
+
 <!-- Importing Nunjucks Macro -->
 {% import 'macros/banner.nunjucks' as nav %}
-{{nav.active('home')}}
+{{nav.active('portfolio',bannercopy)}}
 		<!-- Main -->
 			<div id="main" class="container">
 
