--- a/pages/lab.html
+++ b/pages/lab.html
@@ -4,7 +4,7 @@
 {% block content %} 
 <!-- Importing Nunjucks Macro -->
 {% import 'macros/banner.nunjucks' as nav %}
-{{nav.active('lab')}}
+{{nav.active('lab',bannercopy)}}
 
 		<!-- Main -->
 			<div id="main" class="container">
