minor css and path fixed

--- a/pages/home.html
+++ b/pages/home.html
@@ -17,7 +17,7 @@
 							<div class="box alt">
 									<div class="row 50% uniform ">
 										<div class="6u 12u$(large) 12u$(small)"><span class="image fit"><img src="images/pic01.jpg" alt="" /></span></div>
-										<div class="6u$ 1u$(large) 12u$(small) secondrowimage"><span class="image fit"><img src="images/pic01.jpg" alt="" /></span></div>
+										<div class="6u$ 1u$(large) 1u$(small) secondrowimage"><span class="image fit"><img src="images/pic01.jpg" alt="" /></span></div>
 									</div>
 								</div>
 						</section>
@@ -37,12 +37,13 @@
 						</section>
 					</div>
 
+				<hr class="major" />
 					<div class="row homerollover">
 						<section class="6u 12u$(medium)">
 							<div class="box alt">
 									<div class="row 50% uniform">
 										<div class="6u 12u$(large) 12u$(small)"><span class="image fit"><img src="images/pic01.jpg" alt="" /></span></div>
-										<div class="6u$ 1u$(large) 12u$(small) secondrowimage"><span class="image fit"><img src="images/pic01.jpg" alt="" /></span></div>
+										<div class="6u$ 1u$(large) 1u$(small) secondrowimage"><span class="image fit"><img src="images/pic01.jpg" alt="" /></span></div>
 										
 									</div>
 								</div>
