xsmall button fixes

--- a/pages/home.html
+++ b/pages/home.html
@@ -21,7 +21,7 @@
 									</div>
 								</div>
 						</section>
-						<section class="3u 6u(medium) 10u(small) 10u(xsmall)">
+						<section class="3u 6u(medium) 12u(small) ">
 							<h3>Sed Feugiat</h3>
 							<ul class="actions small">
 									<li><a href="#" class="button small buttoninlinetag">Small</a></li>
@@ -48,7 +48,7 @@
 									</div>
 								</div>
 						</section>
-						<section class="3u 6u(medium) 10u(small) 10u(xsmall)">
+						<section class="3u 6u(medium) 12u(small)">
 							<h3>Sed Feugiat</h3>
 							<ul class="actions small">
 									<li><a href="#" class="button small buttoninlinetag">Small</a></li>
