lab linked to home

--- a/pages/home.html
+++ b/pages/home.html
@@ -17,8 +17,8 @@
 						<section class="6u 12u$(medium)">
 							<div class="box alt">
 									<div class="row 50% uniform ">
-										<div class="6u 12u$(large) 12u$(small)"><span class="image fit"><a href="/portfolio/{{project.slug}}"><img src="/images/projects/{{project.slug}}/{{project.images[0]}}" alt="" /></a></span></div>
-										<div class="6u$ 1u$(large) 1u$(small) secondrowimage"><span class="image fit"><a href="/portfolio/{{project.slug}}"><img src="/images/projects/{{project.slug}}/{{project.images[1]}}" alt="" /></a></span></div>
+										<div class="6u 12u$(large) 12u$(small)"><span class="image fit"><a href="/{{project.type}}/{{project.slug}}"><img src="/images/projects/{{project.slug}}/{{project.images[0]}}" alt="" /></a></span></div>
+										<div class="6u$ 1u$(large) 1u$(small) secondrowimage"><span class="image fit"><a href="/{{project.type}}/{{project.slug}}"><img src="/images/projects/{{project.slug}}/{{project.images[1]}}" alt="" /></a></span></div>
 									</div>
 								</div>
 						</section>
