--- a/pages/labdetail.html
+++ b/pages/labdetail.html
@@ -44,7 +44,7 @@
 
 			<div class="row">
 					{% if project.header.type == 'image' %}
-					<div class="12u 12u$(large) 12u$(small)"><span class="image fit"><img src="/images/lab/{{project.slug}}/{{project.images[0]}}" alt="" /></span></div>
+					<div class="12u 12u$(large) 12u$(small)"><span class="image fit"><img src="/images/projects/{{project.slug}}/{{project.images[0]}}" alt="" /></span></div>
 					{% else %}
 					<div class="12u 12u$(large) 12u$(small)"><figure>
 						<iframe src="http://player.vimeo.com/video/{{project.header.url}}?title=0&amp;byline=0&amp;portrait=0" width="400" height="225" frameborder="0"></iframe>
@@ -70,8 +70,8 @@
 					{% else %}
 
 						<div class="row">
-								<div class="6u  12u$(small)"><span class="image fit"><img src="/images/lab/{{project.slug}}/{{step.images[0]}}" alt="" /></span></div>
-								<div class="6u  12u$(small)"><span class="image fit"><img src="/images/lab/{{project.slug}}/{{step.images[1]}}" alt="" /></span></div>
+								<div class="6u  12u$(small)"><span class="image fit"><img src="/images/projects/{{project.slug}}/{{step.images[0]}}" alt="" /></span></div>
+								<div class="6u  12u$(small)"><span class="image fit"><img src="/images/projects/{{project.slug}}/{{step.images[1]}}" alt="" /></span></div>
 						</div>
 
 					{% endif %}
