--- a/pages/home.html
+++ b/pages/home.html
@@ -5,7 +5,7 @@
 
 <!-- Importing Nunjucks Macro -->
 {% import 'macros/banner.nunjucks' as nav %}
-{{nav.active('portfolio',bannercopy)}}
+{{nav.active('home',bannercopy)}}
 		<!-- Main -->
 			<div id="main" class="container">
 
