--- a/pages/tags.html
+++ b/pages/tags.html
@@ -13,8 +13,8 @@
 				<hr class="major" />
 					<div class="row homerollover">
 						<section class="6u 6u(medium) 12u$(small)">
-							<h3>{{project.title}}</h3>
-							<p>Sections</p>
+							<h3 class="title"><a href="/{{project.type}}/{{project.slug}}">{{project.title}}</a></h3>
+						<!-- 	<p>Sections</p> -->
 						</section>
 						<section class="6u$ 6u$(medium) 12u$(small)">
 							
