--- a/pages/productdetail.html
+++ b/pages/productdetail.html
@@ -40,7 +40,7 @@
 					</ul>
 				</section>
 				<section class="6u 7u$(medium) 12u$(small)">
-					<p>{{project.short_description}}</p>
+					<p>{{project.description}}</p>
 
 				</section>
 				<!-- <section class="3u 6u$(medium) 12u$(small)">
