--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -30,7 +30,7 @@
 									<li><a href="/tags/{{tag.slug}}" class="button small buttoninlinetag">{{tag.name}}</a></li>
 									{% endfor %}
 								</ul>
-							<p>{{project.description}}</p>
+							<p>{{project.short_description}}</p>
 							<p><a href="/portfolio/{{project.slug}}"> Read more -> </a></p>
 						</section>
 					</div>
