--- a/pages/lab.html
+++ b/pages/lab.html
@@ -23,7 +23,7 @@
 									<li><a href="/tags/{{tag.name}}" class="button small buttoninlinetag">{{tag.name}}</a></li>
 									{% endfor %}
 								</ul>
-							<p>{{project.content.rendered}}</p>
+							<p>{{project.short_description}}</p>
 							<p id="url"><a href="/lab/{{project.slug}}"> Read more -> </a></p>
 						</section>
 						<section class="6u 12u$(medium)">
