--- a/pages/contact.html
+++ b/pages/contact.html
@@ -62,7 +62,7 @@
 							<section class="6u$ 6u$(medium) 12u$(small)">
 								<h3>{{person.post_title}}</h3>
 								<p>{{person.position}}<br>
-								<p>{{person.bio}}</p>
+								<p>{{person.bio|safe}}</p>
 							</section>
 					</div>
 
