--- a/pages/home.html
+++ b/pages/home.html
@@ -21,13 +21,13 @@
 										<div class="6u$ 1u$(large) 1u$(small) secondrowimage"><span class="image fit"><a href="/{{project.type}}/{{project.slug}}"><img src="{{project.images[1].guid}}" alt="" /></a></span></div>
 									</div>
 								</div>
-						</section> 
+						</section>
 						<section class="3u 6u(medium) 12u(small) ">
 							<h3 class="title"><a href="/{{project.type}}/{{project.slug}}">{{project.post_title}}</a></h3>
 							<ul class="actions small">
-									{% for tag in project.tags %}
-									<li><a href="/tags/{{tag.name}}" class="button small buttoninlinetag">{{tag.name}}</a></li>
-									{% endfor %}
+								{% for tag in project.tags %}
+								<li><a href="/tags/{{tag.slug}}" class="button small buttoninlinetag">{{tag.name}}</a></li>
+								{% endfor %}
 								</ul>
 						</section>
 						<section class="3u$ 6u$(medium) 12u$(small)">
