--- a/pages/lab.html
+++ b/pages/lab.html
@@ -19,9 +19,9 @@
 						<section class="3u 12u(medium) 12u$(small)">
 
 							<ul class="actions small">
-									{% for tag in project.tags %}
-									<li><a href="/tags/{{tag.name}}" class="button small buttoninlinetag">{{tag.name}}</a></li>
-									{% endfor %}
+								{% for tag in project.tags %}
+								<li><a href="/tags/{{tag.slug}}" class="button small buttoninlinetag">{{tag.name}}</a></li>
+								{% endfor %}
 								</ul>
 							<p>{{project.short_description}}</p>
 							<p id="url"><a href="/lab/{{project.slug}}"> Read more -> </a></p>
