--- a/pages/labdetail.html
+++ b/pages/labdetail.html
@@ -24,9 +24,9 @@
 
 				<section class="3u 3u(medium) 12u$(small)">
 					<ul class="actions small">
-								{% for tag in project.tags %}
-									<li><a href="/tags/{{tag.name}}" class="button small buttoninlinetag">{{tag.name}}</a></li>
-									{% endfor %}
+            {% for tag in project.tags %}
+            <li><a href="/tags/{{tag.slug}}" class="button small buttoninlinetag">{{tag.name}}</a></li>
+            {% endfor %}
 				</ul>
 				</section>
 				<section class="3u 3u(medium) 12u$(small)">
