--- a/pages/lab.html
+++ b/pages/lab.html
@@ -13,7 +13,7 @@
 				<hr class="major" />
 					<div class="row homerollover">
 						<section class="3u 12u(medium) 12u$(small)">
-								<h3>{{project.title.rendered}}</h3>
+								<h3 class="title"><a href="/lab/{{project.slug}}">{{project.title.rendered}}</a></h3>
 								<p id="url">Posted by <a href="http://twitter.com/{{project.authortwitterhandle}}">{{project.authorname}}</a><br>{{project.date.substring(0,10)}}</p>
 						</section>
 						<section class="3u 12u(medium) 12u$(small)">
