--- a/pages/labdetail.html
+++ b/pages/labdetail.html
@@ -4,7 +4,7 @@
 {% block content %}
 <!-- Importing Nunjucks Macro -->
 {% import 'macros/banner.nunjucks' as nav %}
-{{nav.active('lab',bannercopy)}}
+{{nav.active('nocturnal',bannercopy)}}
 
   <style scoped>video {
   width: 100%    !important;
