--- a/pages/portfoliodetail.html
+++ b/pages/portfoliodetail.html
@@ -4,7 +4,7 @@
 {% block content %}
 <!-- Importing Nunjucks Macro -->
 {% import 'macros/banner.nunjucks' as nav %}
-{{nav.active('portfolio',bannercopy)}}
+{{nav.active('external',bannercopy)}}
 
   <style scoped>video {
   width: 100%    !important;
