--- a/pages/productdetail.html
+++ b/pages/productdetail.html
@@ -4,7 +4,7 @@
 {% block content %}
 <!-- Importing Nunjucks Macro -->
 {% import 'macros/banner.nunjucks' as nav %}
-{{nav.active('products',bannercopy)}}
+{{nav.active('internal',bannercopy)}}
 
   <style scoped>video {
   width: 100%    !important;
