--- a/pages/lab.html
+++ b/pages/lab.html
@@ -29,7 +29,7 @@
 						<section class="6u 12u$(medium)">
 							<div class="box alt">
 									<div class="row 50% uniform">
-											<div class="12u 12u$(large) 12u$(small)"><span class="image fit"><img src="{{project.images[0].guid}}" alt="" /></span></div>
+											<div class="12u 12u$(large) 12u$(small)"><span class="image fit"><a href="/nocturnal/{{project.slug}}"><img src="{{project.images[0].guid}}" alt="" /></a></span></div>
 									</div>
 								</div>
 						</section>
