--- a/pages/home.html
+++ b/pages/home.html
@@ -4,6 +4,7 @@
 <meta property="og:image" content="{{meta.image}}"/>
 <meta property="og:site_name" content="Superbright New York"/>
 <meta property="og:description" content="{{meta.description}}"/>
+<meta property="og:url" content="{{meta.url}}"/>
 {% endblock %}
 
 {% block content %}
