--- a/pages/portfoliodetail.html
+++ b/pages/portfoliodetail.html
@@ -1,7 +1,8 @@
 {% extends "layout.nunjucks" %}
 {% block header %}
 <meta property="og:title" content="{{meta.title}}"/>
-<meta property="og:image" content="{{meta.image}}"/>
+<meta property="og:image" content="{{meta.image1}}"/>
+<meta property="og:image" content="{{meta.image2}}"/>
 <meta property="og:site_name" content="Superbright New York"/>
 <meta property="og:description" content="{{meta.description}}"/>
 <meta property="og:url" content="{{meta.url}}"/>
