--- a/pages/tags.html
+++ b/pages/tags.html
@@ -13,7 +13,7 @@
 				<hr class="major" />
 					<div class="row homerollover">
 						<section class="6u 6u(medium) 12u$(small)">
-							<h3 class="title"><a href="/{{project.type}}/{{project.slug}}">{{project.title.rendered}}</a></h3>
+							<h3 class="title"><a href="/{{project.type}}/{{project.post_name}}">{{project.post_title}}</a></h3>
 						<!-- 	<p>Sections</p> -->
 						</section>
 						<section class="6u$ 6u$(medium) 12u$(small)">
